# remcontrol

./: CLAUDE.md  README.md
.claude/skills/release/: SKILL.md
.claude/skills/spec-formatting/: SKILL.md
.github/workflows/: ci.yml  release.yml
app/: App.tsx  CLAUDE.md  app.json  babel.config.js  biome.json  index.ts  package-lock.json  package.json
app/plugins/: withLanCleartext.js  withSplash.js
app/plugins/assets/: network_security_config.xml
app/src/: connection.test.ts  connection.ts  crypto.ts  prefs.test.ts  prefs.ts  probe.test.ts  probe.ts  sensitivity.ts  storage.test.ts  storage.ts  theme.ts  topBarVisibility.test.ts  topBarVisibility.ts  types.ts
app/src/components/: Buttons.tsx  Card.tsx  Chip.tsx  GradientHeader.tsx  Icon.tsx  KeyPanel.tsx  Slider.tsx  TabBar.tsx  keys.test.ts  keys.ts
app/src/screens/: ConnectScreen.tsx  TrackpadScreen.tsx
app_icons_mobile_desktop/generated_app_icons/: README.md
app_icons_mobile_desktop/generated_app_icons/macos/: app.icns
docs/audits/: SECURITY-AUDIT-2026-07-06.md
docs/superpowers/plans/: 2026-07-05-cicd.md  2026-07-05-remcontrol.md  2026-07-06-immersive-trackpad-ui.md  2026-07-06-landscape-support.md
docs/superpowers/specs/: 2026-07-05-cicd-design.md  2026-07-05-remcontrol-design.md  2026-07-06-landscape-support-design.md  2026-07-06-ui-redesign-design.md  2026-07-07-bluetooth-transport-design.md
server/: CLAUDE.md  Cargo.toml  README.md
server/src/: config.rs  crypto.rs  injector.rs  lib.rs  main.rs  protocol.rs  ws.rs
server/tests/: handshake.rs
