[package]
name = "remcontrol-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
dirs = "6"
enigo = "0.6"
local-ip-address = "0.6"
mdns-sd = "0.13"
qr2term = "0.3"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-tungstenite = "0.26"
futures-util = "0.3"
