[package]
name = "remcontrol-server"
version = "1.0.1"
edition = "2024"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
chacha20poly1305 = "0.10"
dirs = "6"
enigo = "0.6"
hex = "0.4"
hkdf = "0.12"
hostname = "0.4"
local-ip-address = "0.6"
mdns-sd = "0.13"
qr2term = "0.3"
rand = "0.9"
rand_core = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tower = { version = "0.5", features = ["limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }

[dev-dependencies]
tokio-tungstenite = "0.26"
futures-util = "0.3"
